# AOC-2024

./: .gitignore  README.md
01/: CMakeLists.txt
01/src/: main.cpp
02/src/: main.cpp
03/src/: main.cpp
04/src/: main.cpp
05/src/: main.cpp
06/src/: main.cpp
07/src/: main.cpp
08/: CMakeLists.txt
08/src/: main.cpp
09/src/: main.cpp
10/src/: main.cpp
11/: CMakeLists.txt
11/src/: main.cpp
12/src/: main.cpp
13/src/: main.cpp
14/src/: main.cpp
15/src/: main.cpp
16/src/: main.cpp
17/src/: main.cpp
18/src/: main.cpp
19/src/: main.cpp
20/src/: main.cpp
21/src/: main.cpp
22/src/: main.cpp
23/src/: main.cpp
24/src/: main.cpp
25/: CMakeLists.txt
25/src/: main.cpp
